--- a/blogpost.html
+++ b/blogpost.html
@@ -6,9 +6,11 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">Tu blog de cabecera</span>
+                <img id="logo" src="imagenes/dragon.png">
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
-            <div id="post"></div>
+            <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar
                  las cosas increibles que se pueden hacer con ramas</p>
@@ -19,6 +21,7 @@
                 Pero estadisticamente no lo eres.... por  ahora.
             </p>
             <p>Suscribete y dale like</p>
+           </div>
         </div>
     </body>
 </html>
