Listo footer con info

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Hyperblog <span id="tagline">Tu blog de cabecera</span>
             </div>
-            <div id="post"></div>
+            <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar
                  las cosas increibles que se pueden hacer con ramas</p>
@@ -19,6 +19,10 @@
                 Pero estadisticamente no lo eres.... por  ahora.
             </p>
             <p>Suscribete y dale like</p>
+            </div>
+            <div id=footer>
+                <p>Hecho con Platzi, la mejor escuela online <3</p>
+            </div>
         </div>
     </body>
 </html>
